--- a/hello-world-servlet/deployment/Deployment.yml
+++ b/hello-world-servlet/deployment/Deployment.yml
@@ -15,7 +15,7 @@ spec:
   template:
     metadata:
       labels:
-        app: disclosure
+        app: hello-world-servlet
         updateTimestamp: ${TIMESTAMP}
     spec:
       initContainers:
