--- a/hello-world-servlet/deployment/Deployment.yml
+++ b/hello-world-servlet/deployment/Deployment.yml
@@ -20,3 +20,5 @@ spec:
         image: hello-world-servlet
         ports:
         - containerPort: 80
+      imagePullSecrets:
+        - name: alexcred
